feat: Implement initial app setup and splash screen
Introduces core application structure, state management, and UI elements for the initial launch. This includes:
- Defining app lifecycle states (loading, registration) and user profile management.
- Initializing mock data for products and notifications.
- Adding new animations and transitioning to a splash screen on app load.
- Refactoring navigation props to allow routing to new screens like Profile.
- Defining new categories with associated icons.
- Implementing a basic `SplashScreen` component.
- Adding a `RegistrationModal` component for new user onboarding.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
       .animate-button-flash {
         animation: button-flash 0.3s ease-in-out;
       }
+      @keyframes scale-up {
+        0% { transform: scale(0.5); opacity: 0; }
+        100% { transform: scale(1); opacity: 1; }
+      }
+      @keyframes slide-up {
+        0% { transform: translateY(100%); }
+        100% { transform: translateY(0); }
+      }
     </style>
     <script type="importmap">
 {
